# Phonebook

./: .gitignore  Makefile  README.md  constants.py  pyproject.toml
Phonebook/scripts/: __init__.py  phonebook.py
phonebook/: __init__.py  change_data.py  constants.py  create_data.py  data_converter.py  db.json  db_converter.py  engine.py  find_data.py  list_data.py  temporary_file.py
phonebook/scripts/: phonebook.py
