[tool.poetry]
name = "phonebook"
version = "0.1.0"
description = ""
authors = ["gReen7aRRow <f.gusarov@inbox.ru>"]
readme = "README.md"
packages = [
        { include = "phonebook"}
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
flake8 = "4.0.1"
pytest = "^7.4.0"

[tool.poetry.scripts]
phonebook = "phonebook.scripts.phonebook:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
